--- a/index.html
+++ b/index.html
@@ -149,24 +149,24 @@
               <div class="member-scroll">
                 <h3 class="member-team">Mark Guerrero</h3>
                 <p class="text-team">Product Designer</p>
-                <ul>
-                  <li>
-                    <svg class="" width="16" height="16">
+                <ul class="icon-team">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-facebook""></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
@@ -182,24 +182,24 @@
               <div class="member-scroll">
                 <h3 class="member-team">Tom Ford</h3>
                 <p class="text-team">Frontend Developer</p>
-                <ul>
-                  <li>
-                    <svg class="" width="16" height="16">
+                <ul class="icon-team">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-facebook""></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-linkedin""></use>
                     </svg>
                   </li>
@@ -211,24 +211,24 @@
               <div class="member-scroll">
                 <h3 class="member-team">Camila Garcia</h3>
                 <p class="text-team">Marketing</p>
-                <ul>
-                  <li>
-                    <svg class="" width="16" height="16">
+                <ul class="icon-team">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-facebook""></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-team" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-linkedin""></use>
                     </svg>
                   </li>
@@ -244,24 +244,24 @@
               <div class="member-scroll">
                 <h3 class="member-team">Daniel Wilson</h3>
                 <p class="text-team">UI Designer</p>
-                <ul>
-                  <li>
-                    <svg class="" width="16" height="16">
+                <ul class="icon-team">
+                  <li class="circle-icon">
+                    <svg class="svg-footer" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-footer" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-footer" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
-                  <li>
-                    <svg class="" width="16" height="16">
+                  <li class="circle-icon">
+                    <svg class="svg-footer" width="16" height="16">
                       <use href="./images/icons/icons.svg#icon-linkedin""></use>
                     </svg>
                   </li>
@@ -360,24 +360,24 @@
         </p>
         <div class="social-list">
           <p>Social media</p>
-          <ul class="footer-icon-list">
-            <li>
-              <svg class="social-footer-icon" width="16" height="16">
+          <ul class="icon-team">
+            <li class="circle-icon">
+              <svg class="svg-footer" width="16" height="16">
                 <use href="./images/icons/icons.svg#icon-instagram"></use>
               </svg>
             </li>
-            <li>
-              <svg class="social-footer-icon" width="16" height="16">
+            <li class="circle-icon">
+              <svg class="svg-footer" width="16" height="16">
                 <use href="./images/icons/icons.svg#icon-twitter"></use>
               </svg>
             </li>
-            <li>
-              <svg class="social-footer-icon" width="16" height="16">
+            <li class="circle-icon">
+              <svg class="svg-footer" width="16" height="16">
                 <use href="./images/icons/icons.svg#icon-facebook""></use>
               </svg>
             </li>
-            <li>
-              <svg class="social-footer-icon" width="16" height="16">
+            <li class="circle-icon">
+              <svg class="svg-footer" width="16" height="16">
                 <use href="./images/icons/icons.svg#icon-linkedin"></use>
               </svg>
             </li>
