--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <!--navi button-->
           <ul class="list">
             <li class="link-button">
-              <a class="list-link" href="./index.html">Studio</a>
+              <a class="list-link active" href="./index.html">Studio</a>
             </li>
             <li class="link-button">
               <a class="list-link" href="">Portfolio</a>
@@ -84,7 +84,7 @@
           <h2 hidden class="visually-hidden">Feature</h2>
           <ul class="feature-list">
             <li class="feature">
-              <div class="feature">
+              <div class="feature-border">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-antenna"></use>
                 </svg>
@@ -97,7 +97,7 @@
               </p>
             </li>
             <li class="feature">
-              <div class="feature">
+              <div class="feature-border">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-clock"></use>
                 </svg>
@@ -109,7 +109,7 @@
               </p>
             </li>
             <li class="feature">
-              <div class="feature">
+              <div class="feature-border">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-diagram"></use>
                 </svg>
@@ -121,7 +121,7 @@
               </p>
             </li>
             <li class="feature">
-              <div class="feature">
+              <div class="feature-border">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-astronaut"></use>
                 </svg>
@@ -362,22 +362,22 @@
           <p>Social media</p>
           <ul class="icon-team">
             <li class="circle-icon">
-              <svg class="svg-footer" width="16" height="16">
+              <svg class="svg-footer" width="24" height="24">
                 <use href="./images/icons/icons.svg#icon-instagram"></use>
               </svg>
             </li>
             <li class="circle-icon">
-              <svg class="svg-footer" width="16" height="16">
+              <svg class="svg-footer" width="24" height="24">
                 <use href="./images/icons/icons.svg#icon-twitter"></use>
               </svg>
             </li>
             <li class="circle-icon">
-              <svg class="svg-footer" width="16" height="16">
+              <svg class="svg-footer" width="24" height="24">
                 <use href="./images/icons/icons.svg#icon-facebook""></use>
               </svg>
             </li>
             <li class="circle-icon">
-              <svg class="svg-footer" width="16" height="16">
+              <svg class="svg-footer" width="24" height="24">
                 <use href="./images/icons/icons.svg#icon-linkedin"></use>
               </svg>
             </li>
