--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <ul class="feature-list">
             <li class="feature">
               <div class="feature-border">
-                <svg class="" width="64" height="64">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -277,66 +277,84 @@
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-scroll">
-              <img
-                src="./images/portfilio/banking.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfilio/banking.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-cont">
                 <h3 class="app">Banking App</h3>
                 <p class="text-app">App</p>
               </div>
             </li>
             <li class="portfolio-scroll">
-              <img
-                src="./images/portfilio/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfilio/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-cont">
                 <h3 class="app">Cashless Payment</h3>
                 <p class="text-app">Marketing</p>
               </div>
             </li>
             <li class="portfolio-scroll">
-              <img
-                src="./images/portfilio/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfilio/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-cont">
                 <h3 class="app">Meditation App</h3>
                 <p class="text-app">App</p>
               </div>
             </li>
             <li class="portfolio-scroll">
-              <img
-                src="./images/portfilio/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfilio/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-cont">
                 <h3 class="app">Taxi Service</h3>
                 <p class="text-app">Marketing</p>
               </div>
             </li>
             <li class="portfolio-scroll">
-              <img
-                src="./images/portfilio/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfilio/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-cont">
                 <h3 class="app">Screen Illustrations</h3>
                 <p class="text-app">Design</p>
               </div>
             </li>
             <li class="portfolio-scroll">
-              <img
-                src="./images/portfilio/online.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/portfilio/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
 
               <div class="portfolio-cont">
                 <h3 class="app">Online Courses</h3>
