--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   </li>
                   <li class="circle-icon">
                     <svg class="svg-team" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook""></use>
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="circle-icon">
@@ -195,12 +195,12 @@
                   </li>
                   <li class="circle-icon">
                     <svg class="svg-team" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook""></use>
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="circle-icon">
                     <svg class="svg-team" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin""></use>
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -224,12 +224,12 @@
                   </li>
                   <li class="circle-icon">
                     <svg class="svg-team" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook""></use>
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="circle-icon">
                     <svg class="svg-team" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin""></use>
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -262,7 +262,7 @@
                   </li>
                   <li class="circle-icon">
                     <svg class="svg-footer" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin""></use>
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -391,7 +391,7 @@
             </li>
             <li class="circle-icon">
               <svg class="svg-footer" width="24" height="24">
-                <use href="./images/icons/icons.svg#icon-facebook""></use>
+                <use href="./images/icons/icons.svg#icon-facebook"></use>
               </svg>
             </li>
             <li class="circle-icon">
