--- a/index.html
+++ b/index.html
@@ -151,24 +151,32 @@
                   <p class="text-team">Product Designer</p>
                   <ul class="icon-team">
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
+                    </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -184,24 +192,32 @@
                   <p class="text-team">Frontend Developer</p>
                   <ul class="icon-team">
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -213,24 +229,32 @@
                   <p class="text-team">Marketing</p>
                   <ul class="icon-team">
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-team" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-team" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -246,24 +270,32 @@
                   <p class="text-team">UI Designer</p>
                   <ul class="icon-team">
                     <li class="circle-icon">
-                      <svg class="svg-footer" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-footer" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-footer" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-footer" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-footer" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-footer" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="circle-icon">
-                      <svg class="svg-footer" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="transit-link" href="">
+                        <svg class="svg-footer" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
