--- a/index.html
+++ b/index.html
@@ -400,39 +400,44 @@
 
       <!-- нижня частина сторінки - підвал -->
       <footer class="footer">
-        <div class="container">
-          <a class="logo-footer" href="./index.html"
-            >Web<span class="logo-link-footer">Studio</span></a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-          <div class="social-list">
-            <p>Social media</p>
-            <ul class="icon-team">
-              <li class="circle-icon">
-                <svg class="svg-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </li>
-              <li class="circle-icon">
-                <svg class="svg-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="circle-icon">
-                <svg class="svg-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </li>
-              <li class="circle-icon">
-                <svg class="svg-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </li>
-            </ul>
+        <div class="container footer">
+          <div class="footer-part1">
+            <a class="logo-footer" href="./index.html"
+              >Web<span class="logo-link-footer">Studio</span></a
+            >
+            <p class="text-footer">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
           </div>
+          <div class="social-list">
+            <p class="text-social-list">Social media</p>
+              <ul class="icon-team-footer">
+                <li class="circle-icon">
+                  <svg class="svg-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="circle-icon">
+                  <svg class="svg-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="circle-icon">
+                  <svg class="svg-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="circle-icon">
+                  <svg class="svg-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
+          </div>
+          <!-- <div class="social-list">
+            
+          </div> -->
           
         </div>
       </footer>
