--- a/index.html
+++ b/index.html
@@ -414,24 +414,32 @@
             <p class="text-social-list">Social media</p>
               <ul class="icon-team-footer">
                 <li class="circle-icon">
-                  <svg class="svg-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
+                  <a class="link-sicial" href="">
+                    <svg class="svg-footer" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="circle-icon">
-                  <svg class="svg-footer" width="24" height="24">
+                  <a class="link-sicial" href="">
+                    <svg class="svg-footer" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
+                    </svg>
+                  </a>
                 </li>
                 <li class="circle-icon">
-                  <svg class="svg-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
+                  <a class="link-sicial" href="">
+                    <svg class="svg-footer" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="circle-icon">
-                  <svg class="svg-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
+                  <a class="link-sicial" href="">
+                    <svg class="svg-footer" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
           </div>
