--- a/index.html
+++ b/index.html
@@ -409,9 +409,8 @@
               Increase the flow of customers and sales for your business with
               digital marketing & growth solutions.
             </p>
-          </div>
-          <div class="social-list">
-            <p class="text-social-list">Social media</p>
+            <div class="social-list">
+              <p class="text-social">Social media</p>
               <ul class="icon-team-footer">
                 <li class="circle-icon">
                   <a class="link-sicial" href="">
@@ -423,7 +422,7 @@
                 <li class="circle-icon">
                   <a class="link-sicial" href="">
                     <svg class="svg-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -442,7 +441,9 @@
                   </a>
                 </li>
               </ul>
+            </div>
           </div>
+          
           <!-- <div class="social-list">
             
           </div> -->
