--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
       <!-- нижня частина сторінки - підвал -->
       <footer class="footer">
-        <div class="container footer">
+        <div class="container footer-container">
           <div class="footer-part1">
             <a class="logo-footer" href="./index.html"
               >Web<span class="logo-link-footer">Studio</span></a
